--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 name: squarebox
 markdown: redcarpet
-pygments: true
+highlighter: rouge
+pygments: null
 excerpt_separator: <!--more-->
-paginate: 3
+jekyll-paginate: 3
 paginate_path: "blog/page:num"
