Added 2nd slide, cloud deployment

--- a/_data/slides.yml
+++ b/_data/slides.yml
@@ -5,8 +5,8 @@
 - image: slide-2.jpg
   desc_location: right
   desc:
-    <h2>Creative Design</h2>
-    <p>Focus on every detail element.</p>
+    <h2>Reliable deployments<br>into the cloud</h2>
+    <p></p>
     <div class='two spacing'></div>
     <a class='button boxed'>Learn More</a>
 - image: slide-3.jpg
